# mik32_test

./: CMakeLists.txt  CMakePresets.json  toolchain.cmake
shared/ldscripts/: ram.ld  spifi.ld
shared/periphery/: timer16.h
src/: main.c  timer_16_blink_irq.c  timer_16_pwm_led_irq.c  usart.c
